<resources>
    <string name="app_name">WateringSystem</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="lostConnection">Connection Lost</string>
    <string name="plantListViewName">Your Plants</string>
    <string name="plantName1">name1</string>
    <string name="plantName2">name2</string>
    <string name="plantName3">name3</string>
    <string name="plantName4">name4</string>
    <string name="title_activity_userlist">UserlistActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--    Srtings used in the activity_plant_main.xml-->
    <string name="watering">WATERING SETTINGS</string>
    <string name="watering_history">WATERING HISTORY</string>
    <string name="moisture_history">MOISTURE HISTORY</string>
    <string name="moisture_level">MOISTURE LEVEL</string>

    <!--    String for Watering Settings-->
    <string name="watering_settings">Watering Settings</string>
    <string name="watering_interval">watering interval</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="water_the_plant">WATER THE PLANT</string>

    <string name="plant_name">Plant \nname:</string>
    <string name="watering_mode">Watering mode:</string>
    <string name="max">Max.:</string>
    <string name="min">Min.:</string>
    <string name="water_amount">Water amount:</string>
    <string name="moisture_threshold">Moisture threshold:</string>

    <string name="manualTitle">Manual</string>
    <string name="manualContent">It enables you to water the plant on button click.\n The only value you need to provide is water amount.</string>
    <string name="timerTitle">Timer</string>
    <string name="timerContent">This mode will water your plant every period of time in the middle of min and max interval.</string>
    <string name="autoTitle">Auto</string>
    <string name="autoContent">It is fully automated mode.\n I will water the plant whenever the moisture level drops below set moisture threshold, but not less frequently than max interval, and not more frequently than min interval.</string>

    <!--    Strings for the spinner in WateringSettings-->
    <string-array name="watering_mode">
        <item>manual</item>
        <item>timer</item>
        <item>auto</item>
    </string-array>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>