<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="410dp"
        android:layout_height="349dp"
        android:background="@color/theme_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:adjustViewBounds="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/txtPlantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="plantName"
            android:textColor="@color/white"
            android:textSize="25sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintVertical_bias="0.333" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/moisture_level"
        android:textColor="@color/theme_green"

        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">


        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="0dp"
                android:background="@xml/plant_btn_options">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/watering"
                android:textAlignment="center"
                android:textColor="@color/theme_green"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.901" />

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="0dp"
                android:background="@xml/plant_btn_options">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/watering_history"
                android:textAlignment="center"
                android:textColor="@color/theme_green"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.901" />

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="0dp"
                android:background="@xml/plant_btn_options">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/moisture_history"
                android:textAlignment="center"
                android:textColor="@color/theme_green"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.901" />

        </LinearLayout>

</LinearLayout>

    <ProgressBar
        android:id="@+id/progressMoisture"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:indeterminateOnly="false"
        android:progressDrawable="@drawable/moisture_circle_indicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.252" />

    <TextView
        android:id="@+id/txtMoisture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="100%"
        android:textColor="#999999"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/progressMoisture"
        app:layout_constraintEnd_toEndOf="@+id/progressMoisture"
        app:layout_constraintStart_toStartOf="@+id/progressMoisture"
        app:layout_constraintTop_toTopOf="@+id/progressMoisture" />

</androidx.constraintlayout.widget.ConstraintLayout>
